<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="makers.latihan.aldy.playstringnumbers.MainActivity">

    <Button
        android:id="@+id/btnFizzBuzz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fizzbuzz" />

    <Button
        android:id="@+id/btnFind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/findnumber" />

    <Button
        android:id="@+id/btnGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gamethree" />
</LinearLayout>
