<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="makers.latihan.aldy.playstringnumbers.FizzActivity">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/editStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:numeric="integer"
            android:hint="@string/start"/>
        <EditText
            android:id="@+id/editEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:numeric="integer"
            android:hint="@string/end"/>
    </LinearLayout>
    <Button
        android:id="@+id/btncheckFizz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ll1"
        android:text="@string/checkFizz"/>
    <TextView
        android:id="@+id/textresFizz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btncheckFizz"
        android:text="Result Fizz:"/>
    <TextView
        android:id="@+id/textresBuzz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textresFizz"
        android:text="Result Buzz : "/>
    <TextView
        android:id="@+id/textresFizzBuzz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textresBuzz"
        android:text="Result Fizz Buzz :"/>
</RelativeLayout>
